gameinformer.com (archived on 2009-06-10)
{
  "alexa_rank": 29974,
  "analysis_subcorpus": true,
  "categories": "entertainment;games",
  "char_count": 9573,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.91,
  "homepage_snapshot_redirected_domain": "gameinformer.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090328192558id_/http://www.gameinformer.com/default.htm",
  "homepage_snapshot_url": "https://web.archive.org/web/20090328193206id_/http%3A//gameinformer.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "gameinformer.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090610034051id_/http%3A//www.gameinformer.com/OtherPages/BottomNav/PrivacyPolicy.htm",
  "policy_title": "Game Informer Online",
  "policy_url": "gameinformer.com/OtherPages/BottomNav/PrivacyPolicy.htm",
  "sha1": "980062ffd9099a31cce87c6cb4c633032751d87a",
  "simhash": 11256429240294298998,
  "simhash_updated": false,
  "site_hostname": "gameinformer.com",
  "site_url": "http://gameinformer.com",
  "smog": 16.11,
  "strict_updated": false,
  "timestamp": "20090610034051",
  "word_count": 1508,
  "year": 2009
}

--- a/g/ga/gam/gameinformer.com.html
+++ b/g/ga/gam/gameinformer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gameinformer.com privacy policy that was archived on 2008-06-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080611162133id_/http%3A//www.gameinformer.com/OtherPages/BottomNav/PrivacyPolicy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gameinformer.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610034051id_/http%3A//www.gameinformer.com/OtherPages/BottomNav/PrivacyPolicy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>
@@ -73,8 +73,7 @@ function checkEnter(event)
 				</tr>
 				<tr>
 					<td height="20" colspan="5" bgcolor="black" align="right"><span id="CommonNavigation1_Generalad3_adSpace"><a href="http://www.gameinformer.com/subscribe.htm" class="headerText">  
-GUITAR HERO: WORLD TOUR ISSUE
- ON SALE NOW!</a></span><img height="10" src="/images/site/clearshim.gif" width="25" border="0"></td>
+ASSASSIN'S CREED II ISSUE ON SALE NOW!</a></span><img height="10" src="/images/site/clearshim.gif" width="25" border="0"></td>
 				</tr>
 				<tr>
 					<td valign="center" align="left" background="/images/site/bg_topleft.gif"><img height="4" src="/images/site/clearshim.gif" width="4" border="0"></td>
@@ -85,7 +84,7 @@ GUITAR HERO: WORLD TOUR ISSUE
 					<td valign="center" align="left" background="/images/site/leftbg.gif"><img height="20" src="/images/site/clearshim.gif" width="4" border="0"></td>
 					<td valign="top" align="right" width="286" background="/images/site/logobg.gif" height="92" rowspan="2"><a href="http://www.gameinformer.com/default.aspx"><img id="CommonNavigation1_Giimage2" src="/images/site/gi_logo.gif" alt="" border="0" height="78" width="295"></a></td>
 					<td valign="bottom" align="right" bgcolor="#000000" colspan="2" height="61" width="100%"><span id="CommonNavigation1_Generalad2_adSpace"><!--Inserted by Microsoft Commerce Server-->
-<img src="/images/ads/coverart/topbar182_a.jpg?CEVT={T=CAMP,CI=130,PG=8,EVT=DOWNLOAD}" width="621" height="61" border="1" alt="GameInformer - The Final Word on Video and Computer Games"></span></td>
+<img src="/images/ads/coverart/topbar193_c.jpg?CEVT={T=CAMP,CI=132,PG=8,EVT=DOWNLOAD}" width="621" height="61" border="1" alt="GameInformer - The Final Word on Video and Computer Games"></span></td>
 					<td valign="center" align="left" background="/images/site/rightbg.gif"><img height="10" src="/images/site/clearshim.gif" width="5" border="0"></td>
 				</tr>
 				<tr height="29">
@@ -162,8 +161,12 @@ GUITAR HERO: WORLD TOUR ISSUE
 </td>
 					<td align="middle" valign="center" height="90"><table border="0" cellpadding="4" cellspacing="0">
 							<tbody><tr>
-								<td><span id="CommonNavigation1_GeneralAd1_adSpace"><a href="http://www.jdoqocy.com/click-2835869-10546726">
-<img src="http://www.awltovhc.com/image-2835869-10546726" width="468" height="60" alt="http://foxshop.seenon.com/?v=foxshop-americanidol" border="0"></a></span></td>
+								<td><span id="CommonNavigation1_GeneralAd1_adSpace"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/&#10;cabs/flash/swflash.cab#version=8,0,0,0" width="728" height="90">
+<param name="movie" value="http://www.gameinformer.com/images/ads/Nestea/AwesomenessPersists_728x90.swf">
+<param name="quality" value="high">
+<param name="flashvars" value="clickTag=http://www.liquidawesomeness.com">
+<embed src="http://www.gameinformer.com/images/ads/Nestea/AwesomenessPersists_728x90.swf" flashvars="clickTag=http://www.liquidawesomeness.com" quality="high" type="application/x-shockwave-flash" width="728" height="90" pluginspage="http://www.macromedia.com/go/getflashplayer">
+</object></span></td>
 							</tr>
 						</tbody></table>
 					</td>
@@ -197,7 +200,7 @@ GUITAR HERO: WORLD TOUR ISSUE
 							<table cellspacing="0" cellpadding="0" border="0" height="100%">
 								<tbody><tr>
 									<td height="100%" valign="top"><span id="GeneralAd1_adSpace"><!--Inserted by Microsoft Commerce Server-->
-<a href="/Redir.aspx?ciid=302&amp;cachename=advertising&amp;PageGroupId=13&amp;url=http://www.kqzyfj.com/click-2835869-10545442" target="_top"><img src="/Images/Ads/kqzyfj/10553472.jpg?CEVT={T=CAMP,CI=302,PG=13,EVT=DOWNLOAD}" border="0" width="160" height="600" alt="Desktop Maestro"></a></span></td>
+<a href="/Redir.aspx?ciid=412&amp;cachename=advertising&amp;PageGroupId=13&amp;url=http://www.gameinformer.com/images/Contests/92caaf5a-9d8e-4856-a280-14d85d279ad1" target="_top"><img src="http://www.gameinformer.com/images/Contests/92caaf5a-9d8e-4856-a280-14d85d279ad1/160x600.jpg?CEVT={T=CAMP,CI=412,PG=13,EVT=DOWNLOAD}" border="0" width="160" height="600" alt=" "></a></span></td>
 								</tr>
 							</tbody></table>
 						</td>
@@ -253,7 +256,8 @@ GUITAR HERO: WORLD TOUR ISSUE
 					<td align="middle" class="footer">
 						<a href="http://www.gameinformer.com/OtherPages/BottomNav/CustomerService.htm">
 							Customer Service</a> | <a href="http://www.gameinformer.com/OtherPages/BottomNav/CorporateInformation.htm">
-							Corporate Information</a>&nbsp;&nbsp;<a href="/RSS"><img src="/images/site/feed-icon-14x14.png" height="14" width="14" border="0"></a>
+							Corporate Information</a> | <a href="http://www.gameinformer.com/OtherPages/Corporate/Advertising.htm">
+							Advertising</a>&nbsp;&nbsp;<a href="/RSS"><img src="/images/site/feed-icon-14x14.png" height="14" width="14" border="0"></a>
 					</td>
 				</tr>
 			</tbody></table>
@@ -385,7 +389,7 @@ GUITAR HERO: WORLD TOUR ISSUE
 		var gConvert=true;
 
 		// Code section for Set the First-Party Cookie domain
-		var gFpcDom=".gamestop.com";
+		var gFpcDom=".gameinformer.com";
 
 		function dcsAdv(){
 			dcsFunc("dcsET");
@@ -642,7 +646,7 @@ GUITAR HERO: WORLD TOUR ISSUE
 	<tbody><tr>
 		<td width="100%" height="20" bgcolor="#000000" align="middle" valign="center" class="contentwsmall"><span class="copyright">Copyright 
 				1991 -
-				2008
+				2009
 				:: Game Informer Magazine </span>
 		</td>
 	</tr>
