--- a/e/et/eth/ethostream.com.html
+++ b/e/et/eth/ethostream.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ethostream.com privacy policy that was archived on 2008-08-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080820090245id_/http%3A//www.ethostream.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ethostream.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610043041id_/http%3A//www.ethostream.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
   <title>Welcome to EthoStream</title>
@@ -186,7 +186,7 @@ urchinTracker();
       Ethostream</a> | <a href="news.php">Newsroom</a> | <a href="employment.php">Employment</a> 
       | <a href="terms.php">Terms of Use</a> | <a href="privacy.php">Privacy</a><br>
 	  <a href="http://www.daysinnwireless.com">Days Inn Wireless</a>&nbsp;|&nbsp;<a href="http://www.super8wireless.com">Super 8 Wireless</a>&nbsp;|&nbsp;<a href="http://www.motel6wireless.com">Motel 6 Wireless</a>&nbsp;|&nbsp;<a href="http://www.countryinnswireless.com">Country Inns Wireless</a>&nbsp;|&nbsp;<a href="http://www.redroofinnwireless.com">Red Roof Wireless</a></div>
-    <div class="copyright">Copyright 2005 EthoStream™ All rights reserved.</div>
+    <div class="copyright">Copyright 2005-2009  EthoStream™ All rights reserved.</div>
   </div>
 </div>
 
