--- a/w/we/wea/wealthyaffiliate.com.html
+++ b/w/we/wea/wealthyaffiliate.com.html
@@ -1,48 +1,14 @@
-<!--The following is the downloaded HTML source of the wealthyaffiliate.com privacy policy that was archived on 2008-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080608085238id_/http%3A//www.wealthyaffiliate.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wealthyaffiliate.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610043907id_/http%3A//www.wealthyaffiliate.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>WealthyAffiliate.com - Disclaimer</title>
 <link href="includes/wa.css" rel="stylesheet" type="text/css">
-<script src="includes/general.js" type="text/javascript" charset="utf-8"></script>
-<script src="includes/prototype.js" type="text/javascript" charset="utf-8"></script>
-<script src="includes/scriptaculous.js" type="text/javascript" charset="utf-8"></script>
-<script src="includes/product_browser.js" type="text/javascript" charset="utf-8"></script>
-<script id="pap_x2s6df8d" src="http://my.wealthyaffiliate.com/affiliate/scripts/track.js" type="text/javascript"></script>
-<script type="text/javascript" charset="utf-8">
-	//<![CDATA[
-	/* PRODUCT BROWSER */
-	Event.observe(window, 'load', function() {
-	  AC.ProductBrowser.init({
-		categories: [ {id: 'pb-cat1', offset: 0}, {id: 'pb-cat2', offset: 0.333}, 
-				{id: 'pb-cat3', offset: 0.666}, {id: 'pb-cat4', offset: 1.0}],
-		imageOverlap: 0,
-		sliderCentering: 250,
-		initialCategory: 0,
-		arrowScrollAmount: 0.3
-	  }); 
-	}, false);    
-	//]]>
-</script>
 <link href="includes/base.css" type="text/css" charset="utf-8" rel="stylesheet">
 <link href="includes/slider.css" type="text/css" charset="utf-8" rel="stylesheet">
-<script type="text/javascript" charset="utf-8">
-	//<![CDATA[
-	document.write('<style type="text/css" media="screen">#pb-productbrowsercontainer { overflow: hidden; } <\/style>');
-	//]]>
-</script><style type="text/css" media="screen">#pb-productbrowsercontainer { overflow: hidden; } </style>
-<script type="text/javascript">
-  if (document.images) {
-  pic1= new Image(326,202); 
-  pic1.src="images/product_community.jpg"; 
-  pic2= new Image(326,202); 
-  pic2.src="images/product_coaching.jpg"; 
-  pic3= new Image(326,202); 
-  pic3.src="images/product_forum.jpg";
-    }
-</script>
 </head>
 <body class="main">
+<div id="tipbox" style="visibility: visible;">
 <table border="0" cellspacing="0" cellpadding="0" id="scrollhere">
   <tbody><tr>
     <td class="tip_top_left"></td>
@@ -51,6 +17,7 @@
     <td class="tip_box">Click the Slider!</td>
   </tr>
 </tbody></table>
+</div>
 <table width="980" border="0" cellspacing="0" cellpadding="0" class="mainborder" align="center">
 <tbody><tr>
   <td><div>
@@ -77,12 +44,11 @@
                 </tr>
               </tbody></table>
             </div>
-            <ul id="pb-productslider" style="left: 0px;">
+            <ul id="pb-productslider" style="visibility: visible; left: 0px;">
               <li class="pb-productimage" id="pb-community"><a href="features.php"></a></li>
               <li class="pb-productimage" id="pb-coaching"><a href="features.php"></a></li>
               <li class="pb-productimage" id="pb-forum"><a href="features.php"></a></li>
               <li class="pb-productimage" id="pb-siterubix"><a href="features.php"></a></li>
-              <li class="pb-productimage" id="pb-webhosting"><a href="features.php"></a></li>
               <li class="pb-productimage" id="pb-websites"><a href="features.php"></a></li>
               <li class="pb-productimage" id="pb-actionplan"><a href="features.php"></a></li>
               <li class="pb-productimage" id="pb-ppc"><a href="features.php"></a></li>
@@ -107,12 +73,13 @@
   <td><!-- adding id="current" to the list item makes it the current page-->
     <div id="header">
       <ul>
-        <li><a href="index.php">Home</a></li>
+        <li><a href="index.php?pop=0">Home</a></li>
         <li><a href="about_us.php">About Us</a></li>
         <li><a href="features.php">What is Included</a></li>
         <li><a href="success.php">WA Success</a></li>
         <li><a href="faq.php">FAQ</a></li>
-        <li><a href="http://my.wealthyaffiliate.com/order/signup">Join Now</a></li>
+        <li><a href="blog/" target="_blank">Blog</a></li>
+        <li><a href="https://my.wealthyaffiliate.com/order/signup">Join Now</a></li>
       </ul>
     </div></td>
 </tr>
@@ -133,8 +100,7 @@
       <p>WealthyAffiliate.com automatically receives and records information on our server logs from your browser, including your IP address, WealthyAffiliate.com cookie information, and the page you request.</p>
       <p>WealthyAffiliate.com uses information for the following general purposes: to fulfill your requests for products and services, improve our services, contact you, conduct research, and provide anonymous reporting.</p>
       <p><strong>Information Sharing and Disclosure</strong></p>
-      <p>WealthyAffiliate.com does not rent, sell, or share personal information about you with other people or nonaffiliated companies except to provide products or services you've requested, when we have your permission, or under the following circumstances:<br>
-        We provide the information to trusted partners who work on behalf of or with WealthyAffiliate.com under confidentiality agreements. These companies may use your personal information to help WealthyAffiliate.com communicate with you about offers from WealthyAffiliate.com and our marketing partners. However, these companies do not have any independent right to share this information.</p>
+      <p>WealthyAffiliate.com does not rent, sell, or share personal information about you with other people or nonaffiliated companies except to provide products or services you've requested, when we have your permission.</p>
       <p>We transfer information about you if WealthyAffiliate.com is acquired by or merged with another company. In this event, WealthyAffiliate.com will notify you before information about you is transferred and becomes subject to a different privacy policy.</p>
       <p><strong>Cookies</strong></p>
       <p>WealthyAffiliate.com may set and access WealthyAffiliate.com cookies on your computer.</p>
@@ -154,6 +120,7 @@
 <a href="http://www.wealthyaffiliate.com/success.php">Success Stories</a> | 
 <a href="http://www.wealthyaffiliate.com/faq.php">Frequently Asked Questions</a> | 
 <a href="http://www.wealthyaffiliate.com/features.php">What's Included</a> | 
+<a href="http://www.wealthyaffiliate.com/blog" target="_blank"><b>Blog</b></a> | 
 <a href="http://www.wealthyaffiliate.com/privacy.php">Privacy Policy</a> | 
 <a href="http://www.wealthyaffiliate.com/contact.php">Contact Us</a> | 
 <a href="http://www.wealthyaffiliate.com/members">Member Login</a> | 
@@ -163,10 +130,47 @@
       </tbody></table></td>
   </tr>
 </tbody></table>
+<script src="includes/general.js" type="text/javascript" charset="utf-8"></script>
+<script src="includes/prototype.js" type="text/javascript" charset="utf-8"></script>
+<script src="includes/scriptaculous.js" type="text/javascript" charset="utf-8"></script>
+<script src="includes/product_browser.js" type="text/javascript" charset="utf-8"></script>
+<script id="pap_x2s6df8d" src="https://my.wealthyaffiliate.com/affiliate/scripts/track.js" type="text/javascript"></script>
+<script type="text/javascript" charset="utf-8">
+	//<![CDATA[
+	/* PRODUCT BROWSER */
+	Event.observe(window, 'load', function() {
+	  AC.ProductBrowser.init({
+		categories: [ {id: 'pb-cat1', offset: 0}, {id: 'pb-cat2', offset: 0.375}, 
+				{id: 'pb-cat3', offset: 0.625}, {id: 'pb-cat4', offset: 1.0}],
+		imageOverlap: 0,
+		sliderCentering: 250,
+		initialCategory: 0,
+		arrowScrollAmount: 0.3
+	  }); 
+	}, false);    
+	//]]>
+</script>
+<script type="text/javascript" charset="utf-8">
+	//<![CDATA[
+	document.write('<style type="text/css" media="screen">#pb-productbrowsercontainer { overflow: hidden; } <\/style>');
+	//]]>
+  document.getElementById('tipbox').style.visibility = "visible";
+  document.getElementById('pb-productslider').style.visibility = "visible";
+</script><style type="text/css" media="screen">#pb-productbrowsercontainer { overflow: hidden; } </style>
 <script type="text/javascript">
---
+  if (document.images) {
+  pic1= new Image(326,202); 
+  pic1.src="images/product_community.jpg"; 
+  pic2= new Image(326,202); 
+  pic2.src="images/product_coaching.jpg"; 
+  pic3= new Image(326,202); 
+  pic3.src="images/product_forum.jpg";
+    }
+</script>
+<link href="includes/success_posts.css" type="text/css" charset="utf-8" rel="stylesheet">
+<script src="includes/success_posts.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript">
 papTrack();
-//-->
 </script>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
@@ -174,6 +178,5 @@ papTrack();
 _uacct = "UA-1781414-2";
 urchinTracker();
 </script>
-..
 
 </body></html>
