--- a/g/go/gol/golden-gate-park.com.html
+++ b/g/go/gol/golden-gate-park.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the golden-gate-park.com privacy policy that was archived on 2008-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081121153645id_/http%3A//www.golden-gate-park.com/index.php/info/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the golden-gate-park.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610064957id_/http%3A//www.golden-gate-park.com/index.php/info/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy</title>
@@ -298,6 +298,8 @@ function clearField(thefield)
 </head>
 
 <body>
+
+<script type="text/javascript"> window.google_analytics_uacct = "UA-2779464-4"; </script>
 
 <div id="wrapper">
 <div id="header">
@@ -629,6 +631,20 @@ Any of the policies or procedures above may be changed at any time without prior
 
 </div>
 
+<div style="margin:25px 0px;">
+<script type="text/javascript"><!--
+google_ad_client = "pub-0267869802560351";
+/* GGP.net, 468x60, Maps */
+google_ad_slot = "5390902206";
+google_ad_width = 468;
+google_ad_height = 60;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
+
+
 </div>
 <!--
 <rdf:RDF xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
@@ -663,15 +679,34 @@ Any of the policies or procedures above may be changed at any time without prior
 </div>
 <br>
 
+<div class="boxhead">
+<img src="http://www.golden-gate-park.com/index.phpi/home_menu.gif">
+<!-- <br/> -->
+<span class="headtxt"> Weekly Park Events by:</span>
+</div>
+<div class="homebox" style="TEXT-ALIGN: left;">
+<div style="padding-bottom:5px;">
+<a href="http://www.feedburner.com/fb/a/emailverifySubmit?feedId=2697912&amp;loc=en_US" style="padding:0;"><img src="http://www.golden-gate-park.com/index.phpi/email.png"></a>
+</div>
+<div style="padding-bottom:5px;">
+<a href="https://twitter.com/goldengatepark" style="padding:0;"><img src="http://www.golden-gate-park.com/index.phpi/twitter.png"></a>
+</div>
+<div>
+<a href="http://www.facebook.com/pages/San-Francisco-CA/Golden-Gate-Park/40533074240" style="padding:0;"><img src="http://www.golden-gate-park.com/index.phpi/facebook.png"></a>
+</div>
+</div>
+<br>
+
+
 <div id="emenu">
 <ul>
 <li class="headimg"><img src="http://www.golden-gate-park.com/index.phpi/photos_menu.gif"><br><span class="headtxt"> Recent Photos</span></li>
 
-<li class="photobox"><a href="http://www.golden-gate-park.com/index.php/photos/image_full/73/"><img src="http://golden-gate-park.com/images/gallery/nature/Dahlia_Flowers_Garden_thumb.jpg" width="100" height="75" alt="Dahlia Flowers Garden" title="Dahlia Flowers Garden"><br>
+<li class="photobox"><a href="http://www.golden-gate-park.com/index.php/photos/image_full/75/"><img src="http://golden-gate-park.com/images/gallery/unsorted/ggpark_thumb.jpg" width="94" height="75" alt="Lulu de la Calamité" title="Lulu de la Calamité"><br>
+Lulu de la Calamité [Unsorted]</a></li><li class="photobox"><a href="http://www.golden-gate-park.com/index.php/photos/image_full/74/"><img src="http://golden-gate-park.com/images/gallery/nature/DSC_0013_thumb.jpg" width="113" height="75" alt="Golden Gate Bridge from Berkeley" title="Golden Gate Bridge from Berkeley"><br>
+Golden Gate Bridge from Berkeley [Nature]</a></li><li class="photobox"><a href="http://www.golden-gate-park.com/index.php/photos/image_full/73/"><img src="http://golden-gate-park.com/images/gallery/nature/Dahlia_Flowers_Garden_thumb.jpg" width="100" height="75" alt="Dahlia Flowers Garden" title="Dahlia Flowers Garden"><br>
 Dahlia Flowers Garden [Nature]</a></li><li class="photobox"><a href="http://www.golden-gate-park.com/index.php/photos/image_full/72/"><img src="http://golden-gate-park.com/images/gallery/nature/Dahlia_Flowers_thumb.jpg" width="100" height="75" alt="Dahlia Flowers - Pinks &amp; Yellows" title="Dahlia Flowers - Pinks &amp; Yellows"><br>
-Dahlia Flowers - Pinks &amp; Yellows [Nature]</a></li><li class="photobox"><a href="http://www.golden-gate-park.com/index.php/photos/image_full/71/"><img src="http://golden-gate-park.com/images/gallery/attractions/aids_memorial_golden_gate_park_thumb.jpg" width="100" height="75" alt="AIDS Memorial - Names in Circles" title="AIDS Memorial - Names in Circles"><br>
-AIDS Memorial - Names in Circles [Attractions]</a></li><li class="photobox"><a href="http://www.golden-gate-park.com/index.php/photos/image_full/70/"><img src="http://golden-gate-park.com/images/gallery/attractions/Conservatory_of_Flowers_thumb.jpg" width="62" height="75" alt="Conservatory of Flowers" title="Conservatory of Flowers"><br>
-Conservatory of Flowers [Attractions]</a></li>
+Dahlia Flowers - Pinks &amp; Yellows [Nature]</a></li>
  
 <li class="lastbox"><br><a href="http://www.golden-gate-park.com/index.php/photos/"><span class="etitle">View more<br></span></a></li>
 </ul>
@@ -697,6 +732,10 @@ Conservatory of Flowers [Attractions]</a></li>
 <ul>
 <li class="headimg"><img src="http://www.golden-gate-park.com/index.phpi/forum_menu.gif"><br><span class="headtxt"> Recent Chat</span></li>
 
+<li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/12/"><span class="etitle">Carnivorous Plant Exhibition</span><br>on Mon May 18, 2 post(s)</a></li>
+
+<li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/19/"><span class="etitle">Exercise stations in the park?</span><br>on Wed April 22, 1 post(s)</a></li>
+
 <li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/17/"><span class="etitle">Finally</span><br>on Fri August 22, 1 post(s)</a></li>
 
 <li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/16/"><span class="etitle">Search for Glory</span><br>on Sun August 10, 1 post(s)</a></li>
@@ -704,8 +743,6 @@ Conservatory of Flowers [Attractions]</a></li>
 <li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/14/"><span class="etitle">The Big ONE Convergence - Sharon Meadow June 21-22</span><br>on Fri June 06, 1 post(s)</a></li>
 
 <li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/13/"><span class="etitle">Events in the park</span><br>on Wed December 12, 1 post(s)</a></li>
-
-<li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/12/"><span class="etitle">Carnivorous Plant Exhibition</span><br>on Tue October 30, 1 post(s)</a></li>
 
 <li class="box"><a href="http://www.golden-gate-park.com/index.php/forums/viewthread/11/"><span class="etitle">Great idea!</span><br>on Sat September 29, 1 post(s)</a></li>
 
@@ -734,5 +771,27 @@ Conservatory of Flowers [Attractions]</a></li>
 _uacct = "UA-2779464-4";
 urchinTracker();
 </script>
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-2779464-4");
+pageTracker._trackPageview();
+} catch(err) {}
+</script>
+
+<!-- Start Quantcast tag -->
+<script type="”text/javascript”">
+_qoptions={qacct:”p-f075CZnCQQbTk”};
+</script>
+<script src="”http://edge.quantserve.com/quant.js”" type="”text/javascript”"></script>
+
+<!-- End Quantcast tag -->
+
+
+
 
 </div></body></html>
