--- a/f/fr/fre/freeadvertz.com.html
+++ b/f/fr/fre/freeadvertz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freeadvertz.com privacy policy that was archived on 2007-08-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070822225023id_/http%3A//freeadvertz.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freeadvertz.com privacy policy that was archived on 2009-06-10.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090610073235id_/http%3A//www.freeadvertz.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head></head><body><center><p> </p><h2><a href="http://www.freeadvertz.com/" target="new">Freeadvertz.com</a> Privacy Statement</h2><p></p></center>
 
