--- a/b/ba/bar/barco.com.html
+++ b/b/ba/bar/barco.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the barco.com privacy policy that was archived on 2008-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081221062614id_/http%3A//www.barco.com/AboutBarco/en/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the barco.com privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611022056id_/http%3A//www.barco.com/AboutBarco/en/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- version 1.1 / gvco --><head>
 <title>Barco | Privacy policy</title>
@@ -11,7 +11,6 @@
 <body>
 <div id="container">
 	
-
 <div id="barcodotcom">
 	<div id="barcodotcomleft"><a href="http://www.barco.com/"><img src="/images/general/barco.com.gif" alt="barco.com"></a></div>
 	<div id="barcodotcomright">
@@ -31,7 +30,7 @@
 </div>
 <div class="topnav">
 	<div class="lefttop"> <a href="http://www.barco.com/">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/aboutbarco/">About us</a> </div>
-	<div id="righttop"> <a href="/corporate/en/Markets/">Markets</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/Products/">Products</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/Support/">Support</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/investors/">Investors</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/jobs/">Jobs</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/pressreleases/">Press</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/Events/">Events</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/corporate/en/contactus/">Contact us</a> </div>
+	<div id="righttop"> <a href="/corporate/en/Markets/">Markets</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/Products/">Products</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/Support/support.asp">Support</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/investors/">Investors</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/jobs/">Jobs</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/pressreleases/">Press</a>&nbsp;&nbsp;|&nbsp;&nbsp; <a href="/corporate/en/Events/">Events</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="/corporate/en/contactus/">Contact us</a> </div>
 </div>
 
 	<div class="breadcrumb"><a href="http://www.barco.com">Barco</a>
@@ -182,16 +181,17 @@
 	</div>
 </div>
 
+
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
+try {
 var pageTracker = _gat._getTracker("UA-3918769-1");
 pageTracker._setDomainName(".barco.com");
 pageTracker._trackPageview();
-</script>
-
+} catch(err) {}</script>
 
 <!-- End Footer -->
 </div>
