--- a/r/re/red/redbooks.com.html
+++ b/r/re/red/redbooks.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the redbooks.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216012416id_/http%3A//www.redbooks.com/Nonsub/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redbooks.com privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611043330id_/http%3A//www.redbooks.com/Nonsub/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <title>Red Books - Privacy</title>
-<meta name="copyright" content="Copyright © 2008 by LexisNexis, a division of Reed Elsevier Inc.">
+<meta name="copyright" content="Copyright © 2009 by LexisNexis, a division of Reed Elsevier Inc.">
 <meta name="description" content="The Advertiser Red Books deliver the quality and depth of information necessary for thorough research on agencies and advertisers worldwide. Today and for the past 100 years, they are the industry Bible.">
 <meta name="keywords" content="redbooks redbook red book agency agencies advertiser advertisers advertising standard directory international media buying sales promotion public relations house agencies marketing agencies cyber agencies internet agencies communications brand-name consumer products the media broadcast television cable television magazines newspapers radio services and supply vendors">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -36,7 +36,7 @@
 	    </tr>        <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="home" name="home" width="8" height="8" id="home"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/index.asp" class="leftnav" onmouseover="MM_swapImage('home','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Home/Login</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/index.asp" class="leftnav" onmouseover="MM_swapImage('home','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Home/Login</a></td>
         </tr>
 
 	    <tr>
@@ -49,17 +49,17 @@
 	    </tr>        <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="showcase" name="showcase" width="8" height="8" id="showcase"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/agency.asp" class="leftnav" onmouseover="MM_swapImage('showcase','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Agency Showcase</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/agency.asp" class="leftnav" onmouseover="MM_swapImage('showcase','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Agency Showcase</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="servicesuppliers" name="servicesuppliers" width="8" height="8" id="servicesuppliers"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/resources.asp" class="leftnav" onmouseover="MM_swapImage('servicesuppliers','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Service &amp; Suppliers</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/resources.asp" class="leftnav" onmouseover="MM_swapImage('servicesuppliers','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Service &amp; Suppliers</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="brandname" name="brandname" width="8" height="8" id="brandname"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/brand.asp" class="leftnav" onmouseover="MM_swapImage('brandname','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Brand Name Lookup</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/brand.asp" class="leftnav" onmouseover="MM_swapImage('brandname','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Brand Name Lookup</a></td>
         </tr>
 
 	    <tr>
@@ -77,12 +77,12 @@
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="updateagency" name="updateagency" width="8" height="8" id="updateagency"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/requestSelfUpdate.asp" class="leftnav" onmouseover="MM_swapImage('updateagency','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Update Your Agency</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/requestSelfUpdate.asp" class="leftnav" onmouseover="MM_swapImage('updateagency','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Update Your Agency</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="associations" name="associations" width="8" height="8" id="associations"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/associations.pdf" target="_blank" class="leftnav" onmouseover="MM_swapImage('associations','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Associations</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/associations.pdf" target="_blank" class="leftnav" onmouseover="MM_swapImage('associations','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Associations</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
@@ -100,52 +100,52 @@
 	    </tr>        <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="pricing" name="pricing" width="8" height="8" id="pricing"></td>
-          <td valign="top"><a href="https://www.redbooks.com/Nonsub/subscribe.asp?payopt=PayNow" class="leftnav" onmouseover="MM_swapImage('pricing','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Pricing/Subscribe</a></td>
+          <td valign="top"><a href="https://redbooks.com/Nonsub/subscribe.asp?payopt=PayNow" class="leftnav" onmouseover="MM_swapImage('pricing','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Pricing/Subscribe</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="freetrial" name="freetrial" width="8" height="8" id="freetrial"></td>
-          <td valign="top"><a href="https://www.redbooks.com/Nonsub/subscribe.asp?payopt=TRIAL" class="leftnav" onmouseover="MM_swapImage('freetrial','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Free Trial</a></td>
+          <td valign="top"><a href="https://redbooks.com/Nonsub/subscribe.asp?payopt=TRIAL" class="leftnav" onmouseover="MM_swapImage('freetrial','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Free Trial</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="purchase" name="purchase" width="8" height="8" id="purchase"></td>
-          <td valign="top"><a href="https://www.redbooks.com/Nonsub/purchase.asp" class="leftnav" onmouseover="MM_swapImage('purchase','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Purchase Book/CD</a></td>
+          <td valign="top"><a href="https://redbooks.com/Nonsub/purchase.asp" class="leftnav" onmouseover="MM_swapImage('purchase','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Purchase Book/CD</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="overview" name="overview" width="8" height="8" id="overview"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/overview.pdf" target="_blank" class="leftnav" onmouseover="MM_swapImage('overview','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Overview</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/overview.pdf" target="_blank" class="leftnav" onmouseover="MM_swapImage('overview','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Overview</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="aboutus" name="aboutus" width="8" height="8" id="aboutus"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/aboutus.asp" class="leftnav" onmouseover="MM_swapImage('aboutus','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">About Us</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/aboutus.asp" class="leftnav" onmouseover="MM_swapImage('aboutus','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">About Us</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="aboutcontent" name="aboutcontent" width="8" height="8" id="aboutcontent"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/aboutcontent.asp" class="leftnav" onmouseover="MM_swapImage('aboutcontent','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">About Our Content</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/aboutcontent.asp" class="leftnav" onmouseover="MM_swapImage('aboutcontent','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">About Our Content</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="contactus" name="contactus" width="8" height="8" id="contactus"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/contactus.asp" class="leftnav" onmouseover="MM_swapImage('contactus','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Contact Us</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/contactus.asp" class="leftnav" onmouseover="MM_swapImage('contactus','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Contact Us</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="feedback" name="feedback" width="8" height="8" id="feedback"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/feedback.asp" class="leftnav" onmouseover="MM_swapImage('feedback','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Feedback</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/feedback.asp" class="leftnav" onmouseover="MM_swapImage('feedback','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Feedback</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="accounthelp" name="accounthelp" width="8" height="8" id="accounthelp"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/accountHelp.asp" class="leftnav" onmouseover="MM_swapImage('accounthelp','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Account Help</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/accountHelp.asp" class="leftnav" onmouseover="MM_swapImage('accounthelp','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Account Help</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
           <td valign="top"><img src="/Image/Layout/nav/cleardot.gif" alt="terms" name="terms" width="8" height="8" id="terms"></td>
-          <td valign="top"><a href="http://www.redbooks.com/Nonsub/terms.asp" class="leftnav" onmouseover="MM_swapImage('terms','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Terms &amp; Conditions</a></td>
+          <td valign="top"><a href="http://redbooks.com/Nonsub/terms.asp" class="leftnav" onmouseover="MM_swapImage('terms','','/Image/Layout/nav/reddot.gif',1)" onmouseout="MM_swapImgRestore()">Terms &amp; Conditions</a></td>
         </tr>
         <tr>
           <td valign="top">&nbsp;</td>
@@ -375,7 +375,7 @@
     <td><img src="/Image/Layout/util/spacer.gif" width="100%" height="1"></td>
   </tr>
   <tr style="height:24px;">
-    <td colspan="2" align="right" valign="middle" class="featurecopy">Copyright © 2008 LexisNexis, a division of Reed Elsevier Inc. All rights reserved.&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td colspan="2" align="right" valign="middle" class="featurecopy">Copyright © 2009 LexisNexis, a division of Reed Elsevier Inc. All rights reserved.&nbsp;&nbsp;&nbsp;&nbsp;</td>
   </tr>
 </tbody></table>
 
@@ -561,7 +561,7 @@ if ((typeof(gConvert)!="undefined")&&gConvert&&(document.cookie.indexOf(gFpc+"="
 	document.write("<SCR"+"IPT TYPE='text/javascript' SRC='"+"http"+(window.location.protocol.indexOf('https:')==0?'s':'')+"://"+gDomain+"/"+gDcsId+"/wtid.js"+"'><\/SCR"+"IPT>");
 }
 //-->
-</script><script type="text/javascript" src="https://statse.webtrendslive.com/dcsspmpbk10000o2ag51q88iz_6l1c/wtid.js"></script>
+</script>
 
 <script type="text/javascript"><!--
 var gImages=new Array;
