hotels.nl (archived on 2009-06-11)
{
  "alexa_rank": 38814,
  "analysis_subcorpus": true,
  "categories": "travel",
  "char_count": 5757,
  "classifier_probability": 0.75,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.36,
  "homepage_snapshot_redirected_domain": "hotels.nl",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090403100841id_/http://www.hotels.nl/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090403100841id_/http%3A//hotels.nl",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hotels.nl",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090611091317id_/http%3A//www.hotels.nl/privacy.html",
  "policy_title": "Hotels.nl \u00bb Privacy Statement",
  "policy_url": "hotels.nl/privacy.html",
  "sha1": "c6d43a4d2fea8f718535407fc843eafe867170e4",
  "simhash": 9236251092379347807,
  "simhash_updated": true,
  "site_hostname": "hotels.nl",
  "site_url": "http://hotels.nl",
  "smog": 11.92,
  "strict_updated": true,
  "timestamp": "20090611091317",
  "word_count": 1019,
  "year": 2009
}

--- a/h/ho/hot/hotels.nl.html
+++ b/h/ho/hot/hotels.nl.html
@@ -1,97 +1,147 @@
-<!--The following is the downloaded HTML source of the hotels.nl privacy policy that was archived on 2002-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20021208181457id_/http%3A//www.hotels.nl/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hotels.nl privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611091317id_/http%3A//www.hotels.nl/privacy.html) for the most accurate reproduction.-->
 
-<html><head>
-<style type="text/css" media="screen"><!--
-body {font-family: arial,sans-serif;}
-//--></style>
-<title>Privacy Statement</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html><head>
+	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
+	<meta http-equiv="Content-Language" content="en">
+	<title>Hotels.nl » Privacy Statement</title>
+	<meta name="keywords" content="amsterdam hotel,hotels,hotel,holland,the netherlands,amsterdam,lodging,amsterdam hotel,dutch hotels,hotel guide,nederland,niederlande,rotterdam,maastricht,utrecht">
+	<meta name="description" content="Hotels.nl - Geen Boekingskosten en tot 75 procent korting op meer dan 450 hotels in Nederland">
+	<meta name="robots" content="index,follow">
+	<meta name="revisit" content="30 days">
+	<meta name="copyright" content="Amsterdam Hotel Guide">
+	<meta name="author" content="Hotels.nl">
+	<style type="text/css" title="Amsterdam Hotel Guide Style Sheet" media="all">
+		@import url( "/css/hotelsnl.css" );
+	</style>	
+	<script src="/scripts/dates.js" type="text/javascript" language="JavaScript"></script>
+	<script src="/scripts/kalender.js" type="text/javascript" language="JavaScript"></script>
+	<script src="/scripts/popup.js" type="text/javascript" language="JavaScript"></script>
+	<script src="/scripts/utils.js" type="text/javascript" language="JavaScript"></script>
 </head>
-<body topmargin="0" leftmargin="0" link="#AA4604" vlink="#004080">
-<table border="0" width="100%" background="http://www.hotels.nl/des/hotels.jpg"><tbody><tr><td width="100%" height="148">
-<p align="right"><br><img src="http://www.hotels.nl/des/hotels-netherlands.gif"></p></td></tr></tbody></table>
-<div align="center"><center>
-<table cellspacing="0" bgcolor="AA4604" border="0">
-<tbody><tr>
-<td align="center"><table cellspacing="0" cellpadding="2" bgcolor="ffffff" border="0">
-<tbody>
-<tr>
-<td nowrap="" align="center" bgcolor="9DA6AB"><table cellspacing="0" cellpadding="0" width="100%" border="0">
-<tbody>
-<tr>
-<td width="100%"><strong>Privacy Statement.</strong></td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-<tr>
-<td><table cellspacing="0" cellpadding="0" border="0" width="750">
-<tbody>
-<tr>
-<td valign="top" width="750"><font face="Arial" size="2">Hotels.nl is a privat e organisation with the goal to be a great help between travellers and hotels.</font><p><font face="Arial" size="2">Hotels.nl knows the risks of booking trough the internet and will do
-anything to keep this as safe as possible.</font></p>
-<p><font face="Arial" size="2"><strong>By making a booking through our system you agree to
-the hotel cancellation policy.</strong></font></p>
-<font face="Arial" size="2"></font><p><font face="Arial" size="2"><strong>Your data and the purpose to collect them.</strong></font></p><ul>
-<li><font face="Arial" size="2"><em>Contact data:</em><br>
-(Your e-mail adress, name, address, phonenumber and faxnumber etc...)<br>
-Your contact data will only be used to make your booking.<br>
-We might use your e-mail adress to hold a survey about our service and the service
-provided by hotels. <br>
-The contact data will never be passed or sold to other companies.</font></li>
-<li><em><small>Booking data:</small></em><br>
-<font face="Arial" size="2">(The name of the hotel, type of room, number of persons,
-arrival and departure date etc...)<br>
-Your booking data will only be used to make your booking. <br>
-The statistics of these bookings can be used to improve our service.</font></li>
-<li><font face="Arial" size="2"><em>Credit card data:<br>
-</em>(Type, number and expiry date.)<br>
-Your credit card data will only be used to guarantee your booking. <br>
-It will be passed to the hotel and <u>deleted from our database</u> once the hotel
-confirms the booking.</font></li>
-<li><font face="Arial" size="2"><em>Technical data:</em><br>
-(Web browser type, screen resolution, operating system, navigation etc...)<br>
-Your technical data will only be used to improve our services.</font></li>
-</ul>
-<p><small>After your stay at the hotel you can request removal of your data by sending an
-email to: <a href="mailto:privacy@hotels.nl">privacy@hotels.nl</a> </small></p>
-<p><strong><small>We will never supply your data to any third party for commercial use.</small></strong></p>
-<p><small>All data that is not linked to you personally, can be used to generate technical
-statistics about the use of our web sites.</small></p>
-<p><small>Your data could be used to provide our partners that use our booking engine, but
-there is an agreement, to protect your personal information, between hotel partners and
-Hotels.nl.<br>
-Hotels.nl will not take responsibility for the partners behaviour.</small><br>
-<small><br>
-<strong>By law we may be required to give out your personal information.</strong></small></p>
-<p><small>You will receive e-mails from Hotels.nl in the following cases:</small></p><ul>
-<li><small>When you make a booking.<br>
-</small></li>
-<li><small>When the booking is confirmed.<br>
-</small></li>
-<li><small>To conduct a survey about our hotels and our booking services.<br>
-</small></li>
-<li><small>When you subscribe to the mailing list on our web site.</small></li>
-</ul>
-<p><small>Hotels.nl will not place cookies on your hard disk without permission. <br>
-The advertisements and banners on our site could be placing cookies</small></p>
-<p><small>Hotels.nl reserves the right to change this privacy statement at any time.<br>
-Questions about this statement can be send to: <a href="mailto:privacy@hotels.nl">privacy@hotels.nl</a></small></p></td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-</tbody>
-</table>
-</td>
-</tr>
-</tbody></table>
-</center></div>
-<center><br>
-<small>© 2002 <a href="http://www.hotels.nl">Amsterdam Hotel Guide</a> &gt; Hotels.nl</small><br><br>
-</center>
+	
+<body>
+
+<div id="page">
+	<a href="/indexen.html"><img id="headeren" src="http://media.hotels.nl/site/banners/topbanneren.jpg" alt="Hotels.nl"></a>
+
+	<div id="breadcrums">
+		<table class="width100" cellspacing="0" cellpadding="0">
+			<tbody><tr>
+				<td class="breadcrum"><h1>
+					<a href="/indexen.html">Hotels.nl</a> » 
+					Privacy Statement
+				</h1></td>
+				<td class="flags">
+					<a href="/nl/privacy.html"><img src="http://media.hotels.nl/site/buttons/nl.jpg" alt="NL" title="Nederlands"></a>
+					<a href="/de/privacy.html"><img src="http://media.hotels.nl/site/buttons/du.jpg" alt="DE" title="Deutsch"></a>
+				</td>
+			</tr>
+		</tbody></table>
+	</div>
+
+	<div id="content">
+		<div class="onecol">
+			<h1 class="colheader">Your details and Hotels.nl</h1>
+			<div class="colsubheader">Hotels.nl Privacy Statement</div>
+			<div class="colbody">
+				This Privacy statement is part of, and covers the Hotels.nl website. Hotels.nl respects the privacy of all visitors of its website <a href="http://www.hotels.nl">www.hotels.nl</a> and will make sure that your personal data are treated confidentially. If you do not agree with this privacy statement in full, you should not use this website.
+			</div>
+			
+			<div class="colsubheader">Which data are processed?</div>
+			<div class="colbody">
+                The data that Hotels.nl processes can be put into two categories:
+
+				<ol type="1">
+					<li>
+                        Personal data which you fill in yourself at the booking form, such as your name, address, telephone number and e-mail address.
+                    </li>
+					<li>
+                        'Traffic' data such as for instance your computer's IP address are logged and your surfing (habit) on the Hotels.nl website is monitored.
+                    </li>
+            	</ol>
+			</div>
+			
+			<div class="colsubheader">1. Personal data</div>
+			<div class="colbody">
+				<p>If you wish to book a hotel via our website, we will ask you for some data which will identify you. We use this information to process and handle your booking and to send you the status of your booking via e-mail. We will send you an e-mail in the following cases:
+</p>
+				<ul class="raquobullets">
+					<li>
+                        To confirm your booking / change or cancellation. After you have made a booking you will receive a confirmation e-mail with all the information about your booking. You will also receive a confirmation of your cancellation or change via e-mail.
+                    </li>
+					<li>
+                        To ask you for feedback about the hotel. About a week after your stay in the hotel you will receive an e-mail with the request to evaluate the hotel.
+                    </li>
+					<li>
+                        To inform you about hotel specials if you have registered to receive this e-mail newsletter. However, you can undo your registration at any time, by sending an e-mail to <a href="mailto:service@hotels.nl">service@hotels.nl</a> or by using the link provided in the newsletter.
+                    </li>
+				</ul>
+                <br>
+				<b>The purpose of processing personal data</b><br>
+                <br>
+                <p>The purpose of processing personal data is to handle your booking and to improve the user friendliness of the website. If you book a hotel (stay) through our website, your personal data are only used to handle your booking the best we can and to get an idea about your wishes with regard to booking a hotel. These data help us to match the wishes of the users of the website. Personal data is only used for the above mentioned purposes.</p>
+                <br>
+                <b>Safety of your personal data</b><br>
+                <br>
+                <p>Your booking will be made via a secure server and we use a safe/secure technology which will encrypt personal and credit card details to do so. This way, your details can not be intercepted or used for any other purpose than your booking.</p>
+                <p>The secure connection between your browser and our website is verified by VeriSign, a reputable standard in this area. The electronic certificate of VeriSign guarantees that you are indeed in contact with Hotels.nl and not with somebody else. All details which you send will be encrypted for your safety/security by using SSL (Secure Socket Layer) technology. This way, your details cannot be intercepted nor can they be used for other purposes than the transaction you desire. You are able to see whether your browser has established a secure connection because of an icon (usually a closed padlock) at the bottom of your browser screen.</p>
+                <p>Furthermore the URL in the browser will start with <b>https://</b> instead of <b>http://</b>.</p>
+                <br>
+                <b>Protecting your personal data</b><br>
+                <br>
+                <p>Hotels.nl takes her responsibility regarding the privacy of your details seriously. Hotels.nl will use the correct technical and organisational measures to protect personal data. Hotels.nl will never pass on your personal data to third parties without your expressed permission, except:</p>
+                <ul>
+                    <li>
+                        To the hotel where you have booked a room. We will pass on the information about your booking to the hotel you have made a booking for
+                    </li>
+                    <li>
+                        If Hotels.nl is legally bind to do so. Although Hotels.nl will do everything it can to safeguard the privacy of users of its website, Hotels.nl might be requested by law to provide information that you have given in order to book a hotel room. Hotels.nl may disclose your personal data if Hotels.nl is legally requested to do so or if we think in good faith that this course of action is necessary to a) cooperate a legal procedure against Hotels.nl or its website; b) to protect and defend the rights or property of Hotels.nl, the website, or its users; c) to act in emergencies to protect the personal safety of users of Hotels.nl, the website or the community
+                    </li>
+                </ul>
+                <p>Hotels.nl reserves the right to obey legal regulations and rules with regard to your use of this website or information given by you to Hotels.nl or information collected with regard to your use of this website.</p>
+			</div>
+            <div class="colsubheader">2. Traffic data</div>
+			<div class="colbody">
+                <p>Traffic data is obtained by:</p>
+                <ul>
+                    <li><b>Cookies</b><br>
+                            When offering its services Hotels.nl may use cookies. These are small files, which are stored on the hard disk of your computer. By using/the use of cookies our website is able to recognize you when you visit the website of Hotels.nl This way we can see to it that you do not repeatedly need to fill in the same information when you visit our website. Which information is stored in a cookie also depends on your own browser settings. Should you have switched off the use of cookies or should you wish to do so, you will still be able to view most parts of the website of Hotels.nl. However, you will NOT be able to make a booking.
+                    </li>
+                    <li><b>Log files</b><br>
+                            We use log files as most standard website servers do. In these log files we keep data such as internet protocol (IP) addresses, type of browser, internet service provider (ISP), referral/closing pages, type of platform, date/time data and the number of clicks for the purpose of analyzing trends, site management, tracing user movements in data collection, tracking problems with our servers and collection geographical data for general use. IP addresses and the like are not linked to personal data.
+                    </li>
+                </ul>
+            </div>
+			<div class="colsubheader">General</div>
+			<div class="colbody">
+                <p>Hotels.nl reserves the right to change this Privacy Statement at any time. Questions and/or remarks with regard to this statement can be send by e-mail to: service@hotels.nl</p>
+            </div>
+		</div><!-- end of content part -->
+	</div>
+	
+	<div id="footer">
+	<table class="width100">
+		<tbody><tr>
+			<td class="lefttext">
+				<a href="/contact.html">Contact</a> |
+				<a href="/aanmelden/index.php">Hotel Owners</a> |
+				<a href="/disclaimer.html">Disclaimer</a> |
+				<a href="/privacy.html">Privacy</a> |
+				<a href="/faq.php">F.A.Q.</a> |
+				<a href="/affiliates/indexen.html">Affiliates</a> |
+				<a href="/citylist.php">City list</a> |
+                                <a href="/partners/">Partners</a>
+			</td>
+			<td class="righttext">
+				<a href="http://www.hotels.nl/indexen.html">© Amsterdam Hotel Guide</a>
+			</td>
+		</tr>
+	</tbody></table>
+</div>
+<script src="/scripts/urchin.js" type="text/javascript"> </script>
+</div>
+
 
 
 </body></html>
